--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ header > div > .anchorCourses {
 }
 .Container {
   margin-top: 50px;
-  width: 300px;
+  width: 310px;
   height: 510px;
   border: 1px solid #2a323c;
   margin-right: 25px;
@@ -90,14 +90,15 @@ div > p {
 
 .anchorCourses1 {
   margin-left: 200px;
-  width: 50px;
+  width: 55px;
   background-color: rgb(40 167 69);
   color: rgb(255 255 255);
-  padding: 10px 20px;
+  padding: 10px 22px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  border-radius: 5px;
+  border-radius: 10px;
+  border: 3px;
 }
 .anchorCourses1:hover {
   background-color: rgb(25 110 45);
